# semantica

./: .gitignore  Cargo.toml
crates/semantica-client/: Cargo.toml
crates/semantica-client/src/: client.rs  lib.rs  stream.rs
crates/semantica-frontend/: Cargo.toml  Trunk.toml  app.css  index.html
crates/semantica-frontend/src/: error.rs  main.rs  storage.rs  utils.rs
crates/semantica-frontend/src/app/: index.rs  login.rs  mod.rs  register.rs
crates/semantica-frontend/src/app/game/: mod.rs
crates/semantica-protocol/: Cargo.toml
crates/semantica-protocol/src/: auth.rs  error.rs  lib.rs  node.rs  spell.rs  user.rs
crates/semantica-server/: Cargo.toml
crates/semantica-server/migrations/: 20240207060140_initial.down.sql  20240207060140_initial.up.sql
crates/semantica-server/src/: ai.rs  context.rs  error.rs  main.rs
crates/semantica-server/src/api/: auth.rs  crafting.rs  events.rs  inventory.rs  mod.rs  node.rs
crates/semantica-server/src/game/: ai.rs  auth.rs  inventory.rs  mod.rs  node.rs  spell.rs
crates/semantica-server/src/utils/: convert.rs  mod.rs
crates/semantica-server/templates/: crafting_prompt.txt
migrations/: 20240207060140_initial.down.sql  20240207060140_initial.up.sql
