[package]
name = "semantica-client"
version = "0.1.0"
edition = "2021"
authors = ["Janosch Gräf <janosch.graef@gmail.com>"]

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
eventsource-stream = "0.2"
thiserror = "1"
serde = "1"
futures = "0.3"
serde_json = "1"
url = "2.5"

[dependencies.semantica-protocol]
path = "../semantica-protocol"
