[package]
name = "semantica-frontend"
version = "0.1.0"
edition = "2021"
authors = ["Janosch Gräf <janosch.graef@gmail.com>"]

[dependencies]
log = "0.4"
thiserror = "1"
leptos = { version = "0.6", features = ["nightly", "csr"] }
leptos_meta = { version = "0.6", features = ["nightly", "csr"] }
leptos_router = { version = "0.6", features = ["nightly", "csr"] }
leptos-use = { version = "0.10", features = ["serde"] }
console_error_panic_hook = "0.1"
wasm-logger = "0.2.0"
gloo-utils = "0.2"
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
web-sys = { version = "0.3", features = ["HtmlInputElement", "ScrollIntoViewOptions", "ScrollLogicalPosition", "Element"] }
futures = "0.3"
lazy_static = "1.4"
strum = { version = "0.26", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
eventsource-stream = "0.2"
serde_json = "1"

[dependencies.semantica-protocol]
path = "../semantica-protocol"
